# minigit

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/commands/: add.rs  commit.rs  init.rs  log.rs
src/core/: object.rs  repo.rs  utils.rs
